fix gap between header and content

--- a/reset.css
+++ b/reset.css
@@ -13,6 +13,11 @@ body {
   height: 100%;
 }
 
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+
 button {
   font: inherit;
 }
